developer.wordpress.org: Fix wrapping of Chapters list items at smaller page widths.
Props pbujok.
Fixes #2299.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4494 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
@@ -877,7 +877,7 @@
 				}
 				& > a {
 					display: inline-block;
-					width: 225px;
+					width: 75%;
 				}
 				ul {
 					list-style-type: none;
